fix(layout): layout z-index 수정

--- a/Front/src/component/Header.module.scss
+++ b/Front/src/component/Header.module.scss
@@ -3,7 +3,7 @@
     grid-template-columns: 150px 1fr 150px;
     align-items: center;
     padding: 0 20px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
 
 .profile {
