--- a/Front/src/component/Sidebar.module.scss
+++ b/Front/src/component/Sidebar.module.scss
@@ -3,7 +3,7 @@ $dark-blue-hover: #2980b9;
 
 .sidebar {
     padding: 20px;
-    box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
     font-size: 25px;
 
     ul {
